Funcionalidade de login e logout
Introduzi a funcionalidade de iniciar sessão e terminar sessão

Sumário: [4/3/0]

--- a/resources/templates/menusenhorio.html
+++ b/resources/templates/menusenhorio.html
@@ -10,17 +10,12 @@
     <ul class="nav navbar-nav">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Gestores
+          Os meus anúncios
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Novo gestor</a>
-          <a class="dropdown-item" href="#">Listar gestores</a>
+          <a class="dropdown-item" href="#">Novo anúncio</a>
+          <a class="active dropdown-item" href="#">Listar anúncios</a>
         </div>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <a href="#" class="nav-link">Gerir aplicação</a>
       </li>
     </ul>
     <ul class="nav navbar-nav ml-auto">
@@ -30,13 +25,4 @@
       </li>
     </ul>
   </div>
-</nav>
-
-<!--Breadcrumbs-->
-<nav aria-label="breadcrumb" role="navigation">
-  <ol class="breadcrumb bg-white">
-  <li class="breadcrumb-item"><a href="#">Início</a></li>
-  <li class="breadcrumb-item">Gestores</li>
-  <li class="breadcrumb-item active">Listar gestores</li>
-  </ol>
 </nav>
