Funcionalidade de Registo de gestores
Introduzi a funcionalidade de criar contas de gestores.

Sumário: [1/3/0]

--- a/resources/templates/menuadministrador.html
+++ b/resources/templates/menuadministrador.html
@@ -13,7 +13,7 @@
           Gestores
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Novo gestor</a>
+          <a class="dropdown-item" href="?action=criargestor">Novo gestor</a>
           <a class="dropdown-item" href="#">Listar gestores</a>
         </div>
       </li>
