Alteração do footer da página
Alterei o aspecto e adicionei as opções da escolha da lingua no footer.

Sumário: [2/6/0]

--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,11 @@ footer {
 	color: white;
 	background-color: #343a40;
 	padding: 10px;
-	line-height: 80%;
+	/*line-height: 80%;*/
 }
+footer a {
+  color: #55acee !important;
+}
 @media screen and (min-width: 768px) {
 	#adv-search {
 		width: 500px;
