--- a/resources/templates/footer.html
+++ b/resources/templates/footer.html
@@ -1,11 +1,22 @@
-<footer class="container-fluid text-center bg-dark">
-  <p><b>ESTGOH - Escola Superior de Tecnologia e Gestão de Oliveira do Hospital</b></p>
-  <p>Rua General Santos Costa | 3400-124 Oliveira do Hospital | Portugal</p>
-  <p>Tel: 238 605 170 | Fax: 238 605 179</p>
-
-  <p>E-mail: <a href="mailto:geral@estgoh.ipc.pt">geral@estgoh.ipc.pt</a></p>
-  <a href="https://www.facebook.com/estgoh.ipc.pt"><i class="fa fa-facebook-square" style="font-size:28px; color: #3b5998"></i></a>
-  <a href="https://www.linkedin.com/edu/school?id=372046"><i class="fa fa-linkedin-square" style="font-size:28px; color: #007bb5"></i></a>
-  <a href="https://www.instagram.com/estgoh"><i class="fa fa-instagram" style="font-size:28px; color: #cd486b"></i></a>
-  <a href="https://www.twitter.com/estgoh_"><i class="fa fa-twitter-square" style="font-size:28px; color: #55acee"></i></a>
+<footer class="container-fluid text-center bg-dark align-middle">
+  <div class="row h-100">
+    <div class="col-3">
+      <p>Visite-nos nas redes sociais:</p>
+      <a href="https://www.facebook.com/estgoh.ipc.pt"><i class="fab fa-facebook-square" style="font-size:28px; color: #3b5998"></i></a>
+      <a href="https://www.linkedin.com/edu/school?id=372046"><i class="fab fa-linkedin" style="font-size:28px; color: #007bb5"></i></a>
+      <a href="https://www.instagram.com/estgoh"><i class="fab fa-instagram" style="font-size:28px; color: #cd486b"></i></a>
+      <a href="https://www.twitter.com/estgoh_"><i class="fab fa-twitter-square" style="font-size:28px; color: #55acee"></i></a><br>
+    </div>
+    <div class="col">
+      Escola Superior de Tecnologia e Gestão de Oliveira do Hospital<br>
+      Rua General Santos Costa | 3400-124 Oliveira do Hospital | Portugal<br>
+      Tel:</span> <a href="tel:+351238605170">238 605 170</a> | Fax: <a href="tel:+351238605179">238 605 179</a><br>
+      E-mail:</span> <a href="mailto:geral@estgoh.ipc.pt">geral@estgoh.ipc.pt</a>
+    </div>
+    <div class="col-3">
+      Linguagem do site:<br>
+      <img height="10" src="img/lang_pt.svg"> <a href="#">Português</a><br>
+      <img height="10" src="img/lang_en.svg"> <a href="#">English</a>
+    </div>
+  </div>
 </footer>
