--- a/resources/templates/menuinicial.html
+++ b/resources/templates/menuinicial.html
@@ -1,7 +1,7 @@
 <!--Menu-->
 <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
   <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">&#x2630;</button>
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="index.php">
     <span>
       <img src="img/logo.svg" style="vertical-align:-4px" height="30">
       <span style="color: white"> ESTGOHome</span>
