Fixação do rodapé no fundo da página
Consegui fixar o rodapé no fundo da página mas a solução que utilizei é
muito inefeciente, pois requer constante processamento javascript quando
a janela é carregada ou redimensionada.

Sumário: [0/2/0]

--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,10 @@ table img{
  *ESTILOS DO PEDRO
 */
 footer {
+  position: fixed;
 	color: white;
-	background-color: #343a40;
+	background-color: #343a40;
 	padding: 10px;
-	/*line-height: 80%;*/
 }
 footer a {
   color: #55acee !important;
